# Fair_Card_Guessing_Game

./: .gitignore  Cargo.toml  LICENSE  README.md
io/: Cargo.toml
io/src/: lib.rs
vara-bets/: .binpath  Cargo.toml  README.md  build.rs
vara-bets-dapp/: App.js  README.md  app.json  package.json
vara-bets-dapp/components/: AboutScreen.js  BetsScreen.js  ChangeNowScreen.js  ContactScreen.js  GamesScreen.js  HomeScreen.js  LotteryScreen.js  ProfileScreen.js  SettingsScreen.js  SplashScreen.js  VaraScreen.js  WalletScreen.js
vara-bets-dapp/navigation/: DrawerNavigator.js
vara-bets/io/: Cargo.toml
vara-bets/io/src/: lib.rs
vara-bets/src/: lib.rs
