[workspace]
resolver = "2"
members = [
    "vara-bets",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Gear Technologies"]
license = "MIT"

[workspace.dependencies]
ft-logic = { git = "https://github.com/gear-foundation/dapps-sharded-fungible-token.git", tag = "2.1.4" }
ft-main = { git = "https://github.com/gear-foundation/dapps-sharded-fungible-token.git", tag = "2.1.4" }
ft-main-io = { git = "https://github.com/gear-foundation/dapps-sharded-fungible-token.git", tag = "2.1.4" }
ft-storage = { git = "https://github.com/gear-foundation/dapps-sharded-fungible-token.git", tag = "2.1.4" }
gclient = { git = "https://github.com/gear-tech/gear.git", rev="e9b6d89cf5cbbd86506458754f3e686856d5dded"}
gear-core = { git = "https://github.com/gear-tech/gear.git"}
gear-wasm-builder = { git = "https://github.com/gear-tech/gear.git", rev="e9b6d89cf5cbbd86506458754f3e686856d5dded"}
gmeta = { git = "https://github.com/gear-tech/gear.git", rev="e9b6d89cf5cbbd86506458754f3e686856d5dded"}
gsdk = { git = "https://github.com/gear-tech/gear.git", rev="e9b6d89cf5cbbd86506458754f3e686856d5dded"}
gstd = { git = "https://github.com/gear-tech/gear.git", rev="e9b6d89cf5cbbd86506458754f3e686856d5dded"}
gtest = { git = "https://github.com/gear-tech/gear.git", rev="e9b6d89cf5cbbd86506458754f3e686856d5dded"}
parity-scale-codec = { version = "3", default-features = false }
scale-info = { version = "2", default-features = false }
tokio = { version = "1.33.0", features = ["rt-multi-thread"] }
sha2 = {version = "0.10.8", default-features = false}
card-io = { path = "vara-bets/io"}

