[package]
name = "card-play"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
gstd = { workspace = true, features = ["debug"] }
parity-scale-codec.workspace = true
scale-info.workspace = true
card-io.workspace = true
# aes-gcm-siv = "0.11.1"
# hex-literal = "0.4.1"
data-encoding = {version = "2.4.0", default-features = false, features = ["alloc"]}
# once_cell = "1.18.0"



[build-dependencies]
gmeta.workspace = true
gear-wasm-builder.workspace = true
card-io.workspace = true

[dev-dependencies]
gtest.workspace = true
