[package]
name = "card-play"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
gstd = { workspace = true, features = ["debug"] }
parity-scale-codec.workspace = true
scale-info.workspace = true
card-io.workspace = true
data-encoding = {version = "2.4.0", default-features = false, features = ["alloc"]}
sha2.workspace = true



[build-dependencies]
gmeta.workspace = true
gear-wasm-builder.workspace = true
card-io.workspace = true

[dev-dependencies]
gtest.workspace = true
