[package]
name = "vara-bets-io"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
gmeta.workspace = true
gstd.workspace = true
parity-scale-codec.workspace = true
scale-info.workspace = true
data-encoding = {version = "2.4.0", default-features = false, features = ["alloc"]}
